# infinitycode

./: .gitignore  README.md  main.py
agentfs/: Cargo.toml
agentfs/crates/agentfs-agent/src/: agent.rs  api.rs  dashboard.rs  display.rs  main.rs  skills.rs  streaming.rs  tools.rs
agentfs/crates/agentfs-agent/src/memory/: compaction.rs  mod.rs  tiers.rs
agentfs/crates/agentfs-cli/src/cmd/: analytics.rs  checkpoint.rs  gc.rs  mod.rs  snapshot.rs
agentfs/crates/agentfs-core/src/: config.rs  events.rs  gc.rs  kvstore.rs  lib.rs  schema.rs
agentfs/crates/agentfs-core/src/filesystem/: agentfs_fs.rs  file_handle.rs  mod.rs
agentfs/crates/agentfs-mcp/: Cargo.toml
agentfs/crates/agentfs-mcp/src/: tools.rs
agentfs/demo/: record-demo.sh
crates/agentfs-agent/: Cargo.toml
crates/agentfs-agent/src/: agent.rs  auth.rs  config.rs  dashboard.html  dashboard.rs  display.rs  error.rs  executor.rs  main.rs  mcp_client.rs  skills.rs  tools.rs
crates/agentfs-agent/src/memory/: episodes.rs  playbook.rs  reflector.rs  search.rs  tool_patterns.rs
crates/agentfs-agent/tests/: memory_integration.rs
crates/agentfs-cli/: Cargo.toml
crates/agentfs-cli/src/: main.rs
crates/agentfs-cli/src/cmd/: fs.rs  info.rs  init.rs  integrity.rs  kv.rs  migrate.rs  sessions.rs  timeline.rs  tools.rs
crates/agentfs-core/: Cargo.toml
crates/agentfs-core/src/: analytics.rs  error.rs  integrity.rs  lib.rs  schema.rs  sessions.rs  toolcalls.rs
crates/agentfs-core/src/connection/: checkpoint.rs  mod.rs  pool.rs  pragmas.rs
crates/agentfs-core/src/filesystem/: cache.rs
crates/agentfs-mcp/src/: db_manager.rs  handlers.rs  main.rs  protocol.rs
demo/: demo.cast
demo/taskflow/: index.html
thrml_sudoku/: __init__.py  solver.py
