[package]
name = "agentfs-agent"
version = "0.1.0"
edition = "2021"
description = "AI coding agent CLI with AgentFS integration — your own Claude Code"

[[bin]]
name = "infinity-agent"
path = "src/main.rs"

[dependencies]
agentfs-core = { path = "../agentfs-core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "signal"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
rustyline = "15"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
tiny_http = "0.12"
open = "5"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
