[package]
name = "agentfs-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for AgentFS — SQLite-backed agent filesystem"

[[bin]]
name = "infinity"
path = "src/main.rs"

[dependencies]
agentfs-core = { path = "../agentfs-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
comfy-table = "7"
serde_json = "1"
anyhow = "1"
