[package]
name = "agentfs-core"
version = "0.1.0"
edition = "2021"
description = "SQLite-backed POSIX-like filesystem for AI agents — with proper durability"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "2"
tracing = "0.1"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "test-util"] }
