[package]
name = "agentfs-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for AgentFS — expose agent filesystem via JSON-RPC over stdio"

[[bin]]
name = "agentfs-mcp"
path = "src/main.rs"

[dependencies]
agentfs-core = { path = "../agentfs-core" }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
